--- a/public/index.html
+++ b/public/index.html
@@ -1,93 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Teams and Athletes</title>
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const teamForm = document.getElementById('teamForm');
-      const athletesButton = document.getElementById('fetchAthletes');
-      const teamsContainer = document.getElementById('teamsContainer');
-      const athletesContainer = document.getElementById('athletesContainer');
-
-      teamForm.addEventListener('submit', async function(event) {
-        event.preventDefault();
-
-        const sport = document.getElementById('sport').value;
-        const country = document.getElementById('country').value || 'usa';
-
-        try {
-          const response = await fetch(`https://us-central1-olympics-c5b48.cloudfunctions.net/api/getTeams?sport=${sport}&country=${country}`);
-          const teams = await response.json();
-
-          displayTeams(teams);
-        } catch (error) {
-          console.error('Error fetching teams:', error);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./styles/styles.css" rel="stylesheet">
+    <title>Olympics Teams and Athletes</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            font-size: 18px;
+            text-align: left;
         }
-      });
-
-      athletesButton.addEventListener('click', async function() {
-        const country = document.getElementById('country').value || 'usa';
-
-        try {
-          const response = await fetch(`https://us-central1-olympics-c5b48.cloudfunctions.net/api/getAllAthletes?country=${country}`);
-          const athletes = await response.json();
-
-          displayAthletes(athletes);
-        } catch (error) {
-          console.error('Error fetching athletes:', error);
+        th, td {
+            padding: 12px;
+            border-bottom: 1px solid #ddd;
         }
-      });
-
-      function displayTeams(teams) {
-        teamsContainer.innerHTML = '';
-        if (teams.length === 0) {
-          teamsContainer.innerHTML = '<p>No teams found.</p>';
-          return;
+        th {
+            background-color: #f2f2f2;
         }
-
-        const ul = document.createElement('ul');
-        teams.forEach(team => {
-          const li = document.createElement('li');
-          li.textContent = `Team ID: ${team.id}, Data: ${JSON.stringify(team.data)}`;
-          ul.appendChild(li);
-        });
-
-        teamsContainer.appendChild(ul);
-      }
-
-      function displayAthletes(athletes) {
-        athletesContainer.innerHTML = '';
-        if (athletes.length === 0) {
-          athletesContainer.innerHTML = '<p>No athletes found.</p>';
-          return;
+        tr:hover {
+            background-color: #f1f1f1;
+            cursor: pointer;
         }
-
-        const ul = document.createElement('ul');
-        athletes.forEach(athlete => {
-          const li = document.createElement('li');
-          li.textContent = `Athlete ID: ${athlete.id}, Name: ${athlete.name}`;
-          ul.appendChild(li);
-        });
-
-        athletesContainer.appendChild(ul);
-      }
-    });
-  </script>
+        img {
+            max-width: 100px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Olympics Teams and Athletes</h1>
 
-  <form id="teamForm">
-    <label for="sport">Sport:</label>
-    <input type="text" id="sport" name="sport" required>
-    <label for="country">Country:</label>
-    <input type="text" id="country" name="country" placeholder="usa">
-    <button type="submit">Get Teams</button>
-  </form>
+    <h1>Olympics Teams</h1>
+    <div id="teamsContainer" class="teamsContainer"></div>
 
-  <div id="teamsContainer"></div>
+    <!-- Add Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
-  <button id="fetchAthletes">Get All Athletes</button>
-  <div id="athletesContainer"></div>
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyC6WBb87ng8iqq4tiqRujhSmK1tpozfrCc",
+            authDomain: "olympics-c5b48.firebaseapp.com",
+            projectId: "olympics-c5b48",
+            storageBucket: "olympics-c5b48.appspot.com",
+            messagingSenderId: "202029431723",
+            appId: "1:202029431723:web:e68aaf9b7b8458015cf0ee",
+            measurementId: "G-Y0FYXEC525"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        document.addEventListener("DOMContentLoaded", function() {
+            const teamsContainer = document.getElementById('teamsContainer');
+
+            // Fetch and display all teams
+            async function fetchTeams() {
+                try {
+                    const response = await fetch('https://us-central1-olympics-c5b48.cloudfunctions.net/api/getTeams');
+                    const teams = await response.json();
+                    displayTeams(teams);
+                } catch (error) {
+                    console.error('Error fetching teams:', error);
+                }
+            }
+
+            // Display teams in the UI
+            async function displayTeams(teams) {
+                teamsContainer.innerHTML = '';
+
+                if (teams.length === 0) {
+                    teamsContainer.innerHTML = '<p>No teams found.</p>';
+                    return;
+                }
+
+                const table = document.createElement('table');
+                const thead = document.createElement('thead');
+                thead.innerHTML = `
+                    <tr>
+                        <th>Sport Image</th>
+                        <th>Display Name</th>
+                        <th>Location</th>
+                        <th>Location Image</th>
+                        <th>Women Athletes</th>
+                        <th>Male Athletes</th>
+                        <th>Dates</th>
+                        <th>Description</th>
+                    </tr>
+                `;
+                table.appendChild(thead);
+
+                const tbody = document.createElement('tbody');
+                for (const team of teams) {
+                    const tr = document.createElement('tr');
+                    tr.innerHTML = `
+                        <td>${await createImageElement(team.data.sport_image)}</td>
+                        <td>${team.data.display_name}</td>
+                        <td>${team.data.location}</td>
+                        <td>${await createImageElement(team.data.location_image)}</td>
+                        <td>${team.data.women_athletes}</td>
+                        <td>${team.data.male_athletes}</td>
+                        <td>${team.data.dates}</td>
+                        <td>${team.data.description}</td>
+                    `;
+                    tr.addEventListener('click', () => {
+                        window.location.href = `/sport.html?sport_id=${team.id}`;
+                    });
+                    tbody.appendChild(tr);
+                }
+
+                table.appendChild(tbody);
+                teamsContainer.appendChild(table);
+            }
+
+            // Get image URL from cache or fetch it from Firebase Storage
+            async function getCachedImageUrl(gsUrl) {
+                if (!gsUrl) return '';
+                const cachedUrl = localStorage.getItem(gsUrl);
+                if (cachedUrl) {
+                    console.log(`Using cached URL for ${gsUrl}`);
+                    return cachedUrl;
+                }
+                try {
+                    const url = await firebase.storage().refFromURL(gsUrl).getDownloadURL();
+                    localStorage.setItem(gsUrl, url);
+                    console.log(`Fetched and cached URL for ${gsUrl}`);
+                    return url;
+                } catch (error) {
+                    console.error('Error fetching image URL:', error);
+                    return '';
+                }
+            }
+
+            // Create image element
+            async function createImageElement(gsUrl) {
+                if (!gsUrl) return '';
+                const url = await getCachedImageUrl(gsUrl);
+                return `<img src="${url}" alt="Image">`;
+            }
+
+            // Fetch teams on page load
+            fetchTeams();
+        });
+    </script>
+
 </body>
 </html>
