--- a/public/index.html
+++ b/public/index.html
@@ -6,39 +6,100 @@
     <link href="./styles/styles.css" rel="stylesheet">
     <title>Olympics Teams and Athletes</title>
     <style>
-        table {
+        html, body {
+            height: 100%;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+            display: flex;
+            margin: 0;
+        }
+        .sidebar {
+            width: 300px;
+            padding: 20px;
+            border-right: 1px solid #ddd;
+            height: 100vh;
+            overflow-y: auto;
+            flex-shrink: 0;
+        }
+        .content {
+            flex: 1;
+            padding: 20px;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            transition: width 0.3s;
+        }
+        .team-header, .player-header {
             width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            font-size: 18px;
-            text-align: left;
-        }
-        th, td {
-            padding: 12px;
+            align-items: center;
+            padding: 20px;
             border-bottom: 1px solid #ddd;
+            display: flex;
         }
-        th {
-            background-color: #f2f2f2;
+        .team-header img, .player-header img {
+            max-width: 100px;
+            margin-right: 20px;
         }
-        tr:hover {
-            background-color: #f1f1f1;
+        .team-content, .player-content {
+            overflow-y: auto;
+        }
+        .team-item, .player-item {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            padding: 10px;
+            display: flex;
             cursor: pointer;
         }
-        img {
-            max-width: 100px;
+        .team-item img, .player-item img {
+            max-width: 50px;
+            margin-right: 10px;
+        }
+        .player-details {
+            display: none;
+            flex-direction: column;
+            padding: 20px;
+            border-left: 1px solid #ddd;
+            overflow-y: auto;
+            flex-shrink: 0;
+            transition: width 0.3s;
+        }
+        .main-content {
+            display: flex;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .home-item {
+            height: 100px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f2f2f2;
+        }
+        .welcome-message {
+            padding: 20px;
+            text-align: center;
+        }
+        .loading-message {
+            text-align: center;
+            font-size: 1.5em;
+            padding: 20px;
+        }
+        .event-header {
+            font-size: 1.2em;
+            margin-top: 20px;
+            margin-bottom: 10px;
         }
     </style>
-</head>
-<body>
-
-    <h1>Olympics Teams</h1>
-    <div id="teamsContainer" class="teamsContainer"></div>
-
     <!-- Add Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
@@ -55,9 +116,14 @@
         firebase.initializeApp(firebaseConfig);
 
         document.addEventListener("DOMContentLoaded", function() {
-            const teamsContainer = document.getElementById('teamsContainer');
+            const teamsContainer = document.querySelector('.sidebar');
+            const content = document.querySelector('.content');
+            const mainContent = document.querySelector('.main-content');
+            const playerDetails = document.createElement('div');
+            playerDetails.className = 'player-details';
 
-            // Fetch and display all teams
+            mainContent.appendChild(playerDetails);
+
             async function fetchTeams() {
                 try {
                     const response = await fetch('https://us-central1-olympics-c5b48.cloudfunctions.net/api/getTeams');
@@ -68,55 +134,132 @@
                 }
             }
 
-            // Display teams in the UI
             async function displayTeams(teams) {
-                teamsContainer.innerHTML = '';
-
-                if (teams.length === 0) {
-                    teamsContainer.innerHTML = '<p>No teams found.</p>';
-                    return;
-                }
-
-                const table = document.createElement('table');
-                const thead = document.createElement('thead');
-                thead.innerHTML = `
-                    <tr>
-                        <th>Sport Image</th>
-                        <th>Display Name</th>
-                        <th>Location</th>
-                        <th>Location Image</th>
-                        <th>Women Athletes</th>
-                        <th>Male Athletes</th>
-                        <th>Dates</th>
-                        <th>Description</th>
-                    </tr>
-                `;
-                table.appendChild(thead);
-
-                const tbody = document.createElement('tbody');
+                teamsContainer.innerHTML = '<div class="home-item" onclick="showHome()">Home</div>';
                 for (const team of teams) {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                        <td>${await createImageElement(team.data.sport_image)}</td>
-                        <td>${team.data.display_name}</td>
-                        <td>${team.data.location}</td>
-                        <td>${await createImageElement(team.data.location_image)}</td>
-                        <td>${team.data.women_athletes}</td>
-                        <td>${team.data.male_athletes}</td>
-                        <td>${team.data.dates}</td>
-                        <td>${team.data.description}</td>
+                    const div = document.createElement('div');
+                    div.className = 'team-item';
+                    div.innerHTML = `
+                        <img src="${await getCachedImageUrl(team.data.sport_image)}" alt="Sport Image">
+                        <span>${team.data.display_name}</span>
                     `;
-                    tr.addEventListener('click', () => {
-                        window.location.href = `/sport.html?sport_id=${team.id}`;
-                    });
-                    tbody.appendChild(tr);
+                    div.addEventListener('click', () => displayTeamDetails(team));
+                    teamsContainer.appendChild(div);
                 }
-
-                table.appendChild(tbody);
-                teamsContainer.appendChild(table);
+                showHome(); // Show home content by default
             }
 
-            // Get image URL from cache or fetch it from Firebase Storage
+            async function displayTeamDetails(team) {
+                playerDetails.style.display = 'none';
+                content.style.flexDirection = 'column';
+                content.style.width = '100%';
+                playerDetails.style.width = '0';
+                content.innerHTML = `
+                    <div class="team-header">
+                        <img src="${await getCachedImageUrl(team.data.sport_image)}" alt="Sport Image">
+                        <div>
+                            <h2>${team.data.display_name}</h2>
+                            <p class="team-description">${team.data.description}</p>
+                        </div>
+                    </div>
+                    <div class="loading-message">Loading athletes...</div>
+                `;
+                history.pushState(null, '', `#${team.data.display_name.replace(/\s+/g, '-')}`);
+                const response = await fetch(`https://us-central1-olympics-c5b48.cloudfunctions.net/api/getAthletes?sport=${team.id}`);
+                const athletes = await response.json();
+                displayAthletes(athletes, team.data.display_name);
+            }
+
+            async function displayAthletes(athletes, teamName) {
+                const athletesByEvent = {};
+                athletes.forEach(athlete => {
+                    athlete.data.event.forEach(event => {
+                        if (!athletesByEvent[event]) {
+                            athletesByEvent[event] = [];
+                        }
+                        athletesByEvent[event].push(athlete);
+                    });
+                });
+
+                content.innerHTML = `
+                    <div class="team-header">
+                        ${document.querySelector('.team-header').innerHTML}
+                    </div>
+                `;
+
+                for (const event in athletesByEvent) {
+                    const eventHeader = document.createElement('div');
+                    eventHeader.className = 'event-header';
+                    eventHeader.textContent = event;
+                    content.appendChild(eventHeader);
+
+                    // Sort athletes by name
+                    athletesByEvent[event].sort((a, b) => a.data.name.localeCompare(b.data.name));
+
+                    const eventList = document.createElement('div');
+                    eventList.className = 'event-list';
+                    athletesByEvent[event].forEach(async athlete => {
+                        const div = document.createElement('div');
+                        div.className = 'player-item';
+                        div.innerHTML = `
+                            <img src="${await getCachedImageUrl(athlete.data.profile_image)}" alt="Profile Image">
+                            <span>${athlete.data.name}</span>
+                        `;
+                        div.addEventListener('click', () => displayPlayerDetails(athlete, teamName));
+                        eventList.appendChild(div);
+                    });
+                    content.appendChild(eventList);
+                }
+            }
+
+            async function displayPlayerDetails(athlete, teamName) {
+                playerDetails.style.display = 'flex';
+                playerDetails.style.flexDirection = 'column';
+                playerDetails.style.overflowY = 'auto';
+                content.style.width = '300px';
+                playerDetails.style.width = 'calc(100% - 400px)';
+                playerDetails.innerHTML = '<div class="loading-message">Loading athlete...</div>';
+                let profileImageUrl = '';
+                let headerImageUrl = '';
+
+                                // Remove the team description when an athlete is clicked
+                const teamDescription = document.querySelector('.team-description');
+                if (teamDescription) {
+                    teamDescription.style.display = 'none';
+                }
+
+                try {
+                    profileImageUrl = await getCachedImageUrl(athlete.data.profile_image);
+                } catch (error) {
+                    console.log('No profile photo found');
+                }
+
+                try {
+                    headerImageUrl = await getCachedImageUrl(athlete.data.header_image);
+                } catch (error) {
+                    console.log('No header photo found');
+                }
+
+                playerDetails.innerHTML = `
+                    <div class="player-header">
+                        ${headerImageUrl ? `<img src="${headerImageUrl}" alt="Header Image">` : ''}
+                        <div>
+                            <h2>${athlete.data.name}</h2>
+                            <p>${athlete.data.hometown}</p>
+                        </div>
+                    </div>
+                    <div class="player-content">
+                        ${profileImageUrl ? `<img src="${profileImageUrl}" alt="Profile Image" style="max-width: 150px; border-radius: 50%; margin: 20px 0;">` : ''}
+                        <p><strong>Previous Olympics:</strong> ${athlete.data.previous_olympics ?? 0}</p>
+                        <p><strong>Description:</strong> ${athlete.data.description}</p>
+                        <a href="${athlete.data.instagram}" target="_blank">Instagram</a>
+                    </div>
+                `;
+
+                history.pushState(null, '', `#${teamName.replace(/\s+/g, '-')}/${athlete.data.name.replace(/\s+/g, '-')}`);
+                console.log("Player details loaded:", athlete.data.name);
+            }
+
             async function getCachedImageUrl(gsUrl) {
                 if (!gsUrl) return '';
                 const cachedUrl = localStorage.getItem(gsUrl);
@@ -135,17 +278,32 @@
                 }
             }
 
-            // Create image element
-            async function createImageElement(gsUrl) {
-                if (!gsUrl) return '';
-                const url = await getCachedImageUrl(gsUrl);
-                return `<img src="${url}" alt="Image">`;
-            }
+            window.showHome = function() {
+                content.style.display = 'block';
+                content.style.flexDirection = 'column';
+                content.style.width = '100%';
+                playerDetails.style.width = '0';
+                playerDetails.style.display = 'none';
+                content.innerHTML = `
+                    <div class="welcome-message">
+                        <h2>Welcome to the Olympics Teams and Athletes</h2>
+                        <p>This is a brief description of the Olympics. Here you can explore various teams and athletes participating in the Olympics.</p>
+                    </div>
+                `;
+                history.pushState(null, '', '#home');
+            };
 
             // Fetch teams on page load
             fetchTeams();
         });
     </script>
-
+</head>
+<body>
+    <div class="sidebar">
+        <!-- Teams will be dynamically populated here -->
+    </div>
+    <div class="main-content">
+        <div class="content"></div>
+    </div>
 </body>
 </html>
