--- a/public/sport.html
+++ b/public/sport.html
@@ -9,6 +9,11 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
+        .event-header {
+            margin-top: 20px;
+            font-size: 1.5em;
+            color: #333;
+        }
         .athlete-container {
             display: flex;
             border: 1px solid #ddd;
@@ -173,13 +178,13 @@
                 try {
                     const response = await fetch(`https://us-central1-olympics-c5b48.cloudfunctions.net/api/getAthletes?sport=${sportId}`);
                     const athletes = await response.json();
-                    displayAthletes(athletes);
+                    await displayAthletes(athletes);
                 } catch (error) {
                     console.error('Error fetching athletes:', error);
                 }
             }
 
-            // Display athletes in the UI
+            // Display athletes in the UI grouped by event
             async function displayAthletes(athletes) {
                 athletesContainer.innerHTML = '';
 
@@ -188,33 +193,53 @@
                     return;
                 }
 
-                for (const athlete of athletes) {
-                    const div = document.createElement('div');
-                    div.className = 'athlete-container';
-                    div.addEventListener('click', () => showModal(athlete));
+                const eventGroups = {};
 
-                    const imgContainer = document.createElement('div');
-                    imgContainer.className = 'athlete-image';
-                    const profileImageUrl = await getCachedImageUrl(athlete.data.profile_image);
-                    imgContainer.innerHTML = `<img src="${profileImageUrl}" alt="Profile Image">`;
+                // Group athletes by event
+                athletes.forEach(athlete => {
+                    athlete.data.event.forEach(event => {
+                        if (!eventGroups[event]) {
+                            eventGroups[event] = [];
+                        }
+                        eventGroups[event].push(athlete);
+                    });
+                });
 
-                    const detailsContainer = document.createElement('div');
-                    detailsContainer.className = 'athlete-details';
-                    detailsContainer.innerHTML = `
-                        <h2>${athlete.data.name}</h2>
-                        <p><strong>Hometown:</strong> ${athlete.data.hometown}</p>
-                        <p><strong>Previous Olympics:</strong> ${athlete.data.previous_olympics ?? 0}</p>
-                    `;
+                // Display athletes grouped by event
+                for (const event in eventGroups) {
+                    const eventHeader = document.createElement('div');
+                    eventHeader.className = 'event-header';
+                    eventHeader.textContent = event;
+                    athletesContainer.appendChild(eventHeader);
 
-                    const descriptionContainer = document.createElement('div');
-                    descriptionContainer.className = 'athlete-description';
-                    descriptionContainer.innerHTML = `<p>${athlete.data.description}</p>`;
+                    for (const athlete of eventGroups[event]) {
+                        const div = document.createElement('div');
+                        div.className = 'athlete-container';
+                        div.addEventListener('click', () => showModal(athlete));
 
-                    div.appendChild(imgContainer);
-                    div.appendChild(detailsContainer);
-                    div.appendChild(descriptionContainer);
+                        const imgContainer = document.createElement('div');
+                        imgContainer.className = 'athlete-image';
+                        const profileImageUrl = await getCachedImageUrl(athlete.data.profile_image);
+                        imgContainer.innerHTML = `<img src="${profileImageUrl}" alt="Profile Image">`;
 
-                    athletesContainer.appendChild(div);
+                        const detailsContainer = document.createElement('div');
+                        detailsContainer.className = 'athlete-details';
+                        detailsContainer.innerHTML = `
+                            <h2>${athlete.data.name}</h2>
+                            <p><strong>Hometown:</strong> ${athlete.data.hometown}</p>
+                            <p><strong>Previous Olympics:</strong> ${athlete.data.previous_olympics ?? 0}</p>
+                        `;
+
+                        const descriptionContainer = document.createElement('div');
+                        descriptionContainer.className = 'athlete-description';
+                        descriptionContainer.innerHTML = `<p>${athlete.data.description}</p>`;
+
+                        div.appendChild(imgContainer);
+                        div.appendChild(detailsContainer);
+                        div.appendChild(descriptionContainer);
+
+                        athletesContainer.appendChild(div);
+                    }
                 }
             }
 
